<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarOfMistake"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/dark"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/mistakeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/mistake"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/mistakeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="top|start"
            android:hint="@string/mistake_hint"
            android:inputType="textMultiLine" />

        <RadioGroup
            android:id="@+id/typeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/rb_light" />

            <RadioButton
                android:id="@+id/rbMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/rb_medium" />

            <RadioButton
                android:id="@+id/rbHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/rb_hard" />
        </RadioGroup>

        <TextView
            android:id="@+id/correctionTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/correction"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/correctionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="top|start"
            android:hint="@string/correction_hint"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/experienceTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/experience"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/experienceET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="top|start"
            android:hint="@string/experience_hint"
            android:inputType="textMultiLine" />

        <ImageButton
            android:id="@+id/saveMistakeBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_done_outline_24" />
    </LinearLayout>
</layout>